@@ -8,6 +8,7 @@ Changes in Version 0.3.2
   o 'qgraph' is no longer on the depends list but imported instead. This makes sure that the Tcl/Tk interface (which is only suggested in qgraph) is not loaded on loading semPlot and as a result makes sure that semPlot does not result in crashes on Mac computers where Tcl/Tk is not installed.
   o Fixed a bug where numeric labels where abbreviated, causing erradic behavior on the labels.
   o Added nDigits argument to control the number of digits used in rounding for labels.
+  o Added 'exoVar' and 'exoCov' arguments that can be used to not display variances or covariances of truely exogenous variables (no incomming directed edges)
 
 Changes in Version 0.3
   o First submit to CRAN.
